# NuakeRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Dependencies/: CMakeLists.txt
Dependencies/glad/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
NuakeRenderer/: FrameBuffer.h  Framebuffer.cpp  Math.h  NuakeRenderer.cpp  NuakeRenderer.h  SSBO.cpp  SSBO.h  Shader.cpp  Shader.h  ShaderRegistry.cpp  ShaderRegistry.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h
src/: NuakeRenderer.cpp  NuakeRenderer.h  Window.cpp  Window.h
